menambahkan aplikasi JavaFX InvenTrack sebagai pengganti aplikasi Swing sebelumnya.